Moved images for wizards in appropriate packages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,3 +33,8 @@ dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - packages/eliud_pkg_create/assets/about.png
+    - packages/eliud_pkg_create/assets/new_app/legal/policies.pdf
+    - packages/eliud_pkg_create/assets/blocked.png
