--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A package with wizards for pages
 homepage: https://eliud.io
 repository: https://github.com/eliudio/eliud
 
-version: 1.0.0+1
+version: 1.0.2
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
@@ -17,7 +17,7 @@ dependencies:
   flutter_bloc: ^8.1.2
 
   eliud_core: ^1.0.1
-  eliud_pkg_text: ^1.0.0
+  eliud_pkg_text: ^1.0.1
   eliud_pkg_fundamentals: ^1.0.0
   eliud_pkg_etc: ^1.0.0
   eliud_pkg_shop: ^1.0.0
