--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A package with wizards for pages
 homepage: https://eliud.io
 repository: https://github.com/eliudio/eliud
 
-version: 1.0.3
+version: 1.0.3+1
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
@@ -16,14 +16,14 @@ dependencies:
   bloc: ^8.1.0
   flutter_bloc: ^8.1.2
 
-  eliud_core: ^1.0.4
-  eliud_pkg_text: ^1.0.2
-  eliud_pkg_fundamentals: ^1.0.1
-  eliud_pkg_etc: ^1.0.1
-  eliud_pkg_shop: ^1.0.1
-  eliud_pkg_membership: ^1.0.1
-  eliud_pkg_workflow: ^1.0.1
-  eliud_pkg_pay: ^1.0.1
+  eliud_core: ^1.0.4+1
+  eliud_pkg_text: ^1.0.2+1
+  eliud_pkg_fundamentals: ^1.0.1+1
+  eliud_pkg_etc: ^1.0.1+1
+  eliud_pkg_shop: ^1.0.1+1
+  eliud_pkg_membership: ^1.0.1+1
+  eliud_pkg_workflow: ^1.0.1+1
+  eliud_pkg_pay: ^1.0.1+1
 
 flutter:
   uses-material-design: true
