--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,32 +1,32 @@
 ---
-name: "eliud_pkg_wizards"
-description: "A package with wizards for pages"
-homepage: "https://eliud.io"
-repository: "https://github.com/eliudio/eliud_pkg_wizards"
-version: "1.0.3+3"
+name: eliud_pkg_wizards
+description: A package with wizards for pages
+homepage: https://eliud.io
+repository: https://github.com/eliudio/eliud_pkg_wizards
+version: 1.0.3+4
 environment:
-  sdk: ">=2.17.0 <4.0.0"
-  flutter: ">=3.0.0"
+  sdk: '>=2.17.0 <4.0.0'
+  flutter: '>=3.0.0'
 dependencies:
   flutter:
-    sdk: "flutter"
-  bloc: "^8.1.0"
-  flutter_bloc: "^8.1.2"
-  eliud_core: "1.0.4+8"
-  eliud_pkg_text: "^1.0.2+1"
-  eliud_pkg_fundamentals: "^1.0.1+1"
-  eliud_pkg_etc: "^1.0.1+1"
-  eliud_pkg_shop: "^1.0.1+1"
-  eliud_pkg_membership: "^1.0.1+1"
-  eliud_pkg_workflow: "^1.0.1+1"
-  eliud_pkg_pay: "^1.0.1+1"
+    sdk: flutter
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.2
+  eliud_core: ^1.0.4+9
+  eliud_pkg_text: ^1.0.2+4
+  eliud_pkg_fundamentals: ^1.0.1+4
+  eliud_pkg_etc: ^1.0.1+4
+  eliud_pkg_shop: ^1.0.1+4
+  eliud_pkg_membership: ^1.0.1+4
+  eliud_pkg_workflow: ^1.0.1+4
+  eliud_pkg_pay: ^1.0.1+5
 flutter:
   uses-material-design: true
   assets:
-  - "packages/eliud_pkg_wizards/assets/about.png"
-  - "packages/eliud_pkg_wizards/assets/new_app/legal/policies.pdf"
-  - "packages/eliud_pkg_wizards/assets/new_app/legal/policies.jpg"
-  - "packages/eliud_pkg_wizards/assets/blocked.png"
+  - packages/eliud_pkg_wizards/assets/about.png
+  - packages/eliud_pkg_wizards/assets/new_app/legal/policies.pdf
+  - packages/eliud_pkg_wizards/assets/new_app/legal/policies.jpg
+  - packages/eliud_pkg_wizards/assets/blocked.png
 platforms:
   android: null
   ios: null
