--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ name: eliud_pkg_wizards
 description: A package with wizards for pages
 homepage: https://eliud.io
 repository: https://github.com/eliudio/eliud_pkg_wizards
-version: 1.0.6
+version: 1.0.8+6
 environment:
   sdk: '>=2.17.0 <4.0.0'
   flutter: '>=3.0.0'
@@ -12,14 +12,14 @@ dependencies:
     sdk: flutter
   bloc: ^8.1.0
   flutter_bloc: ^8.1.2
-  eliud_core: ^1.0.14
-  eliud_pkg_text: ^1.0.2+12
-  eliud_pkg_fundamentals: ^1.0.2
-  eliud_pkg_etc: ^1.0.1+12
-  eliud_pkg_shop: ^1.0.1+12
-  eliud_pkg_membership: ^1.0.1+12
-  eliud_pkg_workflow: ^1.0.1+12
-  eliud_pkg_pay: ^1.0.1+13
+  eliud_core: ^1.0.16+2
+  eliud_pkg_text: ^1.0.7+2
+  eliud_pkg_fundamentals: ^1.0.2+5
+  eliud_pkg_etc: ^1.0.1+17
+  eliud_pkg_shop: ^1.0.1+17
+  eliud_pkg_membership: ^1.0.1+17
+  eliud_pkg_workflow: ^1.0.1+17
+  eliud_pkg_pay: ^1.0.1+18
 flutter:
   uses-material-design: true
   assets:
