--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,12 @@ dependencies:
     sdk: flutter
   bloc: ^8.1.0
   flutter_bloc: ^8.1.2
-  eliud_core: ^1.0.16+13
+  eliud_core: ^1.0.18
   eliud_pkg_text: ^1.0.7+3
   eliud_pkg_fundamentals: ^1.0.2+6
   eliud_pkg_etc: ^1.0.1+18
   eliud_pkg_shop: ^1.0.1+18
-  eliud_pkg_membership: ^1.0.1+19
+  eliud_pkg_membership: ^1.0.2
   eliud_pkg_workflow: ^1.0.1+18
   eliud_pkg_pay: ^1.0.1+19
 flutter:
