--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   bloc: ^8.1.0
   flutter_bloc: ^8.1.2
-  eliud_core: ^1.0.18+1
+  eliud_core: ^1.0.19
   eliud_pkg_text: ^1.0.7+4
   eliud_pkg_fundamentals: ^1.0.2+7
   eliud_pkg_etc: ^1.0.1+19
