--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ name: eliud_pkg_wizards
 description: A package with wizards for pages
 homepage: https://eliud.io
 repository: https://github.com/eliudio/eliud_pkg_wizards
-version: 1.0.8+9
+version: 1.0.8+10
 environment:
   sdk: '>=2.17.0 <4.0.0'
   flutter: '>=3.0.0'
@@ -12,14 +12,14 @@ dependencies:
     sdk: flutter
   bloc: ^8.1.0
   flutter_bloc: ^8.1.2
-  eliud_core: ^1.0.19
-  eliud_pkg_text: ^1.0.7+4
-  eliud_pkg_fundamentals: ^1.0.2+7
-  eliud_pkg_etc: ^1.0.1+19
-  eliud_pkg_shop: ^1.0.1+19
-  eliud_pkg_membership: ^1.0.2+1
-  eliud_pkg_workflow: ^1.0.1+19
-  eliud_pkg_pay: ^1.0.1+20
+  eliud_core: ^1.0.19+1
+  eliud_pkg_text: ^1.0.7+5
+  eliud_pkg_fundamentals: ^1.0.2+8
+  eliud_pkg_etc: ^1.0.1+20
+  eliud_pkg_shop: ^1.0.1+20
+  eliud_pkg_membership: ^1.0.2+2
+  eliud_pkg_workflow: ^1.0.1+20
+  eliud_pkg_pay: ^1.0.1+21
 flutter:
   uses-material-design: true
   assets:
