--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,11 @@
 ---
 name: eliud_pkg_wizards
-description: A package with wizards for pages
-homepage: https://github.com/eliudio
+description: This package can be included in your eliud app (https://eliud.io) and
+  can be used to extend your app with wizards. Wizards allow to add functionalities
+  quickly.
+homepage: https://github.com/eliudio/eliud_core
 repository: https://github.com/eliudio/eliud_pkg_wizards
-version: 1.0.8+19
+version: 1.1.3
 environment:
   sdk: '>=2.17.0 <4.0.0'
   flutter: '>=3.0.0'
@@ -12,14 +14,14 @@ dependencies:
     sdk: flutter
   bloc: ^8.1.0
   flutter_bloc: ^8.1.2
-  eliud_core: ^1.0.20+14
-  eliud_pkg_text: ^1.0.7+13
-  eliud_pkg_fundamentals: ^1.0.2+16
-  eliud_pkg_etc: ^1.0.1+29
-  eliud_pkg_shop: ^1.0.1+29
-  eliud_pkg_membership: ^1.0.2+10
-  eliud_pkg_workflow: ^1.0.1+28
-  eliud_pkg_pay: ^1.0.1+29
+  eliud_core: ^1.1.3
+  eliud_pkg_text: ^1.1.3
+  eliud_pkg_fundamentals: ^1.1.3
+  eliud_pkg_etc: ^1.1.3
+  eliud_pkg_shop: ^1.1.3
+  eliud_pkg_membership: ^1.1.3
+  eliud_pkg_workflow: ^1.1.3
+  eliud_pkg_pay: ^1.1.3
 flutter:
   uses-material-design: true
   assets:
@@ -31,3 +33,5 @@ platforms:
   android: null
   ios: null
   web: null
+dev_dependencies:
+  lints: ^3.0.0
