--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,27 +1,27 @@
 ---
 name: eliud_pkg_wizards
-description: This package can be included in your eliud app (https://eliud.io) and
-  can be used to extend your app with wizards. Wizards allow to add functionalities
-  quickly.
-homepage: https://github.com/eliudio/eliud_core
+description: eliud_pkg_wizards is a package to provide wizards. More info at https://eliud.io
+homepage: https://eliud.io
 repository: https://github.com/eliudio/eliud_pkg_wizards
-version: 1.1.3
+version: 1.1.5+5
 environment:
   sdk: '>=2.17.0 <4.0.0'
   flutter: '>=3.0.0'
 dependencies:
+  bloc: ^8.1.2
+  cloud_firestore: ^4.12.2
+  collection: ^1.17.2
+  eliud_core: ^1.1.5+7
+  eliud_pkg_text: ^1.1.5+6
+  eliud_pkg_fundamentals: ^1.1.5+6
+  eliud_pkg_etc: ^1.1.5+8
+  eliud_pkg_shop: ^1.1.5+9
+  eliud_pkg_membership: ^1.1.5+5
+  eliud_pkg_workflow: ^1.1.5+5
+  eliud_pkg_pay: ^1.1.5+5
+  flutter_bloc: ^8.1.3
   flutter:
     sdk: flutter
-  bloc: ^8.1.0
-  flutter_bloc: ^8.1.2
-  eliud_core: ^1.1.3
-  eliud_pkg_text: ^1.1.3
-  eliud_pkg_fundamentals: ^1.1.3
-  eliud_pkg_etc: ^1.1.3
-  eliud_pkg_shop: ^1.1.3
-  eliud_pkg_membership: ^1.1.3
-  eliud_pkg_workflow: ^1.1.3
-  eliud_pkg_pay: ^1.1.3
 flutter:
   uses-material-design: true
   assets:
