--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,38 @@ dependencies:
   bloc: ^8.1.2
   cloud_firestore: ^4.12.2
   collection: ^1.17.2
-  eliud_core: ^1.1.5+7
-  eliud_pkg_text: ^1.1.5+6
-  eliud_pkg_fundamentals: ^1.0.0
-  eliud_pkg_etc: ^1.1.5+8
-  eliud_pkg_shop: ^1.1.5+10
-  eliud_pkg_membership: ^1.1.5+5
-  eliud_pkg_workflow: ^1.1.5+5
-  eliud_pkg_pay: ^1.1.5+5
+  eliud_core:
+    path: ../eliud_core
+  eliud_core_main:
+    path: ../eliud_core_main
+  eliud_core_helpers:
+    path: ../eliud_core_helpers
+  eliud_core_model:
+    path: ../eliud_core_model
+  eliud_pkg_text:
+    path: ../eliud_pkg_text
+  eliud_pkg_fundamentals:
+    path: ../eliud_pkg_fundamentals
+  eliud_pkg_fundamentals_model:
+    path: ../eliud_pkg_fundamentals_model
+  eliud_pkg_etc:
+    path: ../eliud_pkg_etc
+  eliud_pkg_etc_model:
+    path: ../eliud_pkg_etc_model
+  eliud_pkg_shop_model:
+    path: ../eliud_pkg_shop_model
+  eliud_pkg_membership_model:
+    path: ../eliud_pkg_membership_model
+  eliud_pkg_workflow_model:
+    path: ../eliud_pkg_workflow_model
+  eliud_pkg_shop:
+    path: ../eliud_pkg_shop
+  eliud_pkg_membership:
+    path: ../eliud_pkg_membership
+  eliud_pkg_workflow:
+    path: ../eliud_pkg_workflow
+  eliud_pkg_pay:
+    path: ../eliud_pkg_pay
   flutter_bloc: ^8.1.3
   flutter:
     sdk: flutter
