--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,45 +5,26 @@ homepage: https://eliud.io
 repository: https://github.com/eliudio/eliud_pkg_wizards
 version: 1.1.5+5
 environment:
-  sdk: '>=2.17.0 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
   flutter: '>=3.0.0'
 dependencies:
-  bloc: ^8.1.2
-  cloud_firestore: ^4.12.2
-  collection: ^1.17.2
-  eliud_core:
-    path: ../eliud_core
-  eliud_core_main:
+  eliud_core_main:                                                                                   # ANDROID IOS             WEB
     path: ../eliud_core_main
-  eliud_core_helpers:
-    path: ../eliud_core_helpers
-  eliud_core_model:
+  eliud_core_model:                                                                                  # ANDROID IOS             WEB
     path: ../eliud_core_model
-  eliud_pkg_text:
-    path: ../eliud_pkg_text
-  eliud_pkg_fundamentals:
-    path: ../eliud_pkg_fundamentals
-  eliud_pkg_fundamentals_model:
-    path: ../eliud_pkg_fundamentals_model
-  eliud_pkg_etc:
-    path: ../eliud_pkg_etc
-  eliud_pkg_etc_model:
-    path: ../eliud_pkg_etc_model
-  eliud_pkg_shop_model:
-    path: ../eliud_pkg_shop_model
-  eliud_pkg_membership_model:
-    path: ../eliud_pkg_membership_model
-  eliud_pkg_workflow_model:
-    path: ../eliud_pkg_workflow_model
-  eliud_pkg_shop:
-    path: ../eliud_pkg_shop
-  eliud_pkg_membership:
+  eliud_pkg_membership:                                                                              # ANDROID IOS             WEB
     path: ../eliud_pkg_membership
-  eliud_pkg_workflow:
+  eliud_pkg_workflow:                                                                                # ANDROID IOS             WEB
     path: ../eliud_pkg_workflow
-  eliud_pkg_pay:
+  eliud_pkg_fundamentals_model:                                                                      # ANDROID IOS             WEB
+    path: ../eliud_pkg_fundamentals_model
+  eliud_pkg_text:                                                                                    # ANDROID IOS             WEB
+    path: ../eliud_pkg_text
+  eliud_pkg_pay:                                                                                     # ANDROID IOS             WEB
     path: ../eliud_pkg_pay
-  flutter_bloc: ^8.1.3
+  eliud_pkg_shop:                                                                                    # ANDROID IOS             WEB
+    path: ../eliud_pkg_shop
+
   flutter:
     sdk: flutter
 flutter:
